# ocaml-nn

./: Makefile  README.md  dune-project  nn.opam
.github/workflows/: build.yml
examples/: Makefile  char_rnn.ml  dune  makemore.ml  ngram.ml  square.ml  test.ml
notes/: Makefile  README.md
src/: Makefile  dune  extlib.ml  matrix.ml  net.ml  network.ml  neuron.ml  nn.ml  test.ml  vector.ml
