(lang dune 2.7)
(name nn)
(source (github smimram/ocaml-nn))
(license GPL-3.0-or-later)
(authors "Samuel Mimram <smimram@gmail.com>")
(maintainers "Samuel Mimram <smimram@gmail.com>")

(generate_opam_files true)

(package
 (name nn)
 (synopsis "Neural networks")
 (description "A pure OCaml library in order to build and train neural networks.")
)
