(executable
 (name test)
 (modules test)
 (libraries nn)
)

(executable
 (name square)
 (modules square)
 (libraries nn)
)

(executable
 (name ngram)
 (modules ngram)
 (libraries nn)
)

(executable
 (name char_rnn)
 (modules char_rnn)
 (libraries nn)
)

(rule
 (alias runtest)
 (action
  (progn
   (run ./test.exe)
   (run ./square.exe)
  )
 )
)
